<resources>
  <string name="app_name">TRADUCTOR</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="translated_text_hint">Translated text</string>
  <string name="downloaded_models_label">Downloaded models: %1$s</string>
  <string name="translate_progress">Translating&#8230;</string>
  <string name="delete_model">Delete Model</string>
  <string name="download_model">Download Model</string>
  <string name="unknown_error">Unknown error occurred.</string>
  <string name="source_text_hint">Source text</string>
  <string name="h_img_desc">Imagen de header</string>
  <string name="h_img_circle">circle</string>
  <string name="const_pass">Ingrese contraseña</string>
  <string name="const_user">Ingrese usuario</string>
  <string name="const_btn_login">INGRESAR</string>
  <string name="const_txt_user">Nombre de usuario</string>
  <string name="const_txt_pass">Contraseña</string>
</resources>